# Software-Rasterizer

./: .gitignore  CMakeLists.txt
include/: Image.h
src/: Geometry.h  Image.cpp  Model.cpp  Model.h  TGAImage.cpp  TGAImage.h  main.cpp
